[package]
name = "xtb-rs"
version = "0.1.0"
authors = ["1fbff5f83b23d39d38b1dfcb4cac8d9b <0a02d0db@opayq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
serde_json = "1.0"

rustls = "0.19.1"
webpki = "0.21.0"
webpki-roots = "0.21.0"
once_cell = "1.7.2"
serde = { version = "1.0.125", features = ["derive"] }
decimal = "2.1.0"
serde_repr = "0.1"

#tokio = { version = "1.0", features = [ "full" ] }
#tokio-rustls = "0.22.0"
#casey = "0.3.3"
#futures = "0.3"
